[gd_scene load_steps=3 format=2]

[ext_resource path="res://Characters/Friendly/TownNPC/Quest/Blueprint/dialog_theme.tres" type="Theme" id=1]
[ext_resource path="res://Characters/Friendly/TownNPC/Quest/Blueprint/ActionDialog.gd" type="Script" id=2]

[node name="ActionDialog" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = 147.0
margin_top = 36.0
margin_right = 346.0
margin_bottom = 111.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 151.0
margin_top = 40.0
margin_right = 342.0
margin_bottom = 105.0
align = 1
valign = 1
autowrap = true

[node name="Option1" type="Button" parent="."]
margin_left = 147.0
margin_top = 111.0
margin_right = 247.0
margin_bottom = 125.0

[node name="Option2" type="Button" parent="."]
margin_left = 246.0
margin_top = 111.0
margin_right = 346.0
margin_bottom = 125.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Option1" to="." method="_on_Option1_pressed"]
[connection signal="pressed" from="Option2" to="." method="_on_Option2_pressed"]
